# QuickClipboard

./: .gitignore  .gitmodules  DEVELOPMENT_GUIDE.md  README.md  package-lock.json  package.json  uno.config.js  vite.config.js
.claude/: settings.local.json
.github/workflows/: Sync.yml  ci.yml  release.yml
i18n/: README.en.md  README.ja.md  README.ko.md  README.zh-TW.md
scripts/: build-tauri.js  community-build.js  dev-tauri.js  update-readme-downloads.js
src/: App.jsx  i18n.js  index.html  index.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bundle-scripts/windows/nsis/x64/: SimpChinese.nsh  installer.nsi
src-tauri/capabilities/: community.json  default.json  preview-window.json  quickpaste.json  receive-box.json  screenshot.json  settings.json  text-editor.json  transfer-shelf.json  updater.json
src-tauri/plugins/lan-sync-core/: Cargo.toml
src-tauri/plugins/lan-sync-core/src/: lib.rs  manager.rs  protocol.rs  types.rs
src-tauri/plugins/lan-sync-core/tests/: connection.rs  record.rs
src-tauri/plugins/low-memory-fltk/: Cargo.toml
src-tauri/plugins/low-memory-fltk/src/: lib.rs
src-tauri/src/: commands.rs  database.rs  edge_snap.rs  lib.rs  main.rs  startup_diagnostics.rs  window_drag.rs
src-tauri/src/commands/: app_links.rs  clipboard.rs  data_management.rs  drop_proxy.rs  favorites.rs  groups.rs  image_library.rs  lan_sync.rs  mod.rs  ocr.rs  screenshot.rs  settings.rs  sound.rs  sync_transfer.rs  system.rs  webdav_sync.rs  window.rs
src-tauri/src/maintenance/: mod.rs  ui.rs
src-tauri/src/security/: mod.rs  webview_guard.rs
src-tauri/src/services/: mod.rs  quick_text_service.rs  secure_credentials.rs  store.rs  window_service.rs
src-tauri/src/services/clipboard/: capture.rs  content_type.rs  mod.rs  monitor.rs  processor.rs  storage.rs
src-tauri/src/services/data_management/: mod.rs
src-tauri/src/services/database/: clipboard.rs  connection.rs  favorites.rs  groups.rs  mod.rs  models.rs  queries.rs  tombstones.rs
src-tauri/src/services/image_library/: mod.rs
src-tauri/src/services/lan_sync/: clipboard_sync.rs  mod.rs  state.rs
src-tauri/src/services/lan_sync/file_transfer/: commands.rs  http_server.rs  mod.rs  receiver.rs  sender.rs
src-tauri/src/services/low_memory/: manager.rs  mod.rs  panel.rs  state.rs
src-tauri/src/services/memory/: mod.rs
src-tauri/src/services/notification/: mod.rs
src-tauri/src/services/paste/: clipboard_content.rs  file.rs  keyboard.rs  merge.rs  mod.rs  options.rs  paste_handler.rs  text.rs
src-tauri/src/services/screenshot/: mod.rs
src-tauri/src/services/settings/: mod.rs  model.rs  state.rs  storage.rs
src-tauri/src/services/sound/: mod.rs
src-tauri/src/services/sync_transfer/: device_identity.rs  mod.rs  sync_plan.rs  types.rs
src-tauri/src/services/sync_transfer/lan/: auto_sync.rs  discovery.rs  files.rs  http_client.rs  http_server.rs  mod.rs  pairing.rs  peer_store.rs  pull.rs  push.rs  runtime.rs  snapshot.rs  transfer.rs
src-tauri/src/services/system/: app_filter.rs  display_change_monitor.rs  elevate.rs  focus.rs  hotkey.rs  input_common.rs  input_monitor.rs  mod.rs  raw_input.rs  win_v_hotkey.rs
src-tauri/src/services/system/hotkey/: global.rs  navigation.rs
src-tauri/src/services/webdav_sync/: chunk_manager.rs  cloud_files.rs  crypto.rs  downloader.rs  groups_sync.rs  index_manager.rs  local_state.rs  mod.rs  sync_scheduler.rs  tombstones_sync.rs  types.rs  uploader.rs  webdav_client.rs
src-tauri/src/settings/: converter.rs  model.rs  window.rs
src-tauri/src/utils/: app_links.rs  cf_html.rs  html.rs  icon.rs  image.rs  image_http_server.rs  mod.rs  mouse.rs  positioning.rs  screen.rs  system.rs  text.rs  ws_server.rs
src-tauri/src/windows/: mod.rs
src-tauri/src/windows/chat_drop_proxy/: mod.rs
src-tauri/src/windows/community_window/: creator.rs  manager.rs  mod.rs
src-tauri/src/windows/drop_proxy/: mod.rs
src-tauri/src/windows/main_window/: drag.rs  edge_monitor.rs  manager.rs  mod.rs  positioning.rs  snap.rs  state.rs  visibility.rs
src-tauri/src/windows/native_pin_window/: mod.rs
src-tauri/src/windows/pin_image_window/: mod.rs  pin_image_window.rs
src-tauri/src/windows/plugins/: mod.rs
src-tauri/src/windows/plugins/context_menu/: commands.rs  mod.rs  window.rs
src-tauri/src/windows/plugins/input_dialog/: window.rs
src-tauri/src/windows/preview_window/: mod.rs
src-tauri/src/windows/quickpaste/: manager.rs  mod.rs  positioning.rs  state.rs
src-tauri/src/windows/receive_box/: commands.rs  manager.rs  mod.rs  types.rs  window.rs
src-tauri/src/windows/screenshot_window/: auto_selection.rs  capture.rs  element_rect.rs  image_stitcher.rs  long_screenshot.rs  manager.rs  mod.rs  ui_automation_types.rs  ui_elements.rs
src-tauri/src/windows/settings_window/: creator.rs  manager.rs  mod.rs
src-tauri/src/windows/text_editor_window/: creator.rs  manager.rs  mod.rs
src-tauri/src/windows/transfer_shelf/: commands.rs  manager.rs  mod.rs  storage.rs  types.rs  window.rs
src-tauri/src/windows/tray/: events.rs  menu.rs  mod.rs  native_menu.rs  setup.rs
src-tauri/src/windows/tray/native_menu/: builder.rs  handlers.rs  mod.rs  pagination.rs  state.rs  utils.rs  visibility.rs
src-tauri/src/windows/updater_window/: creator.rs  mod.rs
src/locales/: en-US.json
src/plugins/context_menu/: contextMenu.css  contextMenu.js  index.js
src/shared/: i18n.js
src/shared/api/: chat.js  clipboard.js  dataManagement.js  dropProxy.js  favorites.js  groups.js  imageLibrary.js  index.js  previewWindow.js  receiveBox.js  settings.js  sound.js  syncTransfer.js  system.js  textEditor.js  transferShelf.js  webdavSync.js  window.js
src/shared/config/: appLinks.json  tools.js
src/shared/constants/: tabVisibility.js
src/shared/hooks/: useCustomFont.js  useCustomScrollbar.js  useDragWithThreshold.js  useInputFocus.js  useItemCommon.jsx  useNavigation.js  useNavigationKeyboard.js  useSettingsSync.js  useShortcutDuplicateCheck.js  useShortcutStatuses.js  useSortable.js  useTextPreview.js  useTheme.js  useWindowAnimation.js  useWindowDrag.js
(+253 files in other folders)
