[package]
name = "lan-sync-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

 tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
 tokio-tungstenite = "0.26"
 futures-util = "0.3"
 url = "2"
 thiserror = "2"

 fastrand = "2"

 hmac = "0.12"
 sha2 = "0.10"
 hex = "0.4"
 if-addrs = "0.13"

