[package]
name = "low-memory-fltk"
version = "0.1.0"
edition = "2021"

[dependencies]
fltk = { version = "1.5", features = ["fltk-bundled"] }
once_cell = "1.18"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm"] }
